class Administrador extends Usuario {
    Administrador(String usuario, String contraseña) {
        super(usuario, contraseña);
    }
}
