public class Materia {
    String codigo;
    String nombre;

    Materia (String nombre, String codigo) {
        super();
        this.codigo = codigo;
        this.nombre = nombre;
    }
}
