class NodoBST {
    Estudiante estudiante;
    NodoBST izquierdo;
    NodoBST derecho;

    NodoBST(Estudiante estudiante) {
        this.estudiante = estudiante;
    }
}