class NodoDoble {
    Estudiante estudiante;
    NodoDoble siguiente;
    NodoDoble anterior;

    NodoDoble(Estudiante estudiante) {
        this.estudiante = estudiante;
    }
}