class NodoUsuario {
    Usuario usuario;
    NodoUsuario siguiente;

    NodoUsuario(Usuario usuario) {
        this.usuario = usuario;
    }
}