class Usuario {
    String usuario;
    String contraseña;

    Usuario(String usuario, String contraseña) {
        this.usuario = usuario;
        this.contraseña = contraseña;
    }
}